# FastAPI-React-KS-testing

./: README.md
fastapi-backend/: .gitignore  README.md  pyproject.toml  requirements.txt
fastapi-backend/app/: alembic.ini  main.py  models.py  requirements.txt
fastapi-backend/app/alembic/: env.py
fastapi-backend/app/alembic/versions/: 0cbfc59d7f99_changed_name_to_first_and_last_name.py  16de88003c84_nothing.py  2023_03_01_2048-98cbb7da3363_trying.py  2023_03_06_2039-65d73eee8cf2_adding_enums.py  2023_03_07_1026-a60515ced593_m_m_relationship_for_roles.py  2023_03_07_1059-28e41d275ad4_m_m_relationship_for_roles.py  2023_03_19_1913_update_user_model.py  2023_03_19_1915_update_user_model.py  2023_03_19_1920_update_user_model.py  2023_03_19_1922_update_user_model.py  2023_03_19_2000_a.py  2023_03_19_2054_test_and_creator_combination.py  2023_03_20_1221_test_and_creator_combination.py  2023_03_20_1232_test_and_question_combination.py  2023_03_20_1236_question_and_answer_combination.py  2023_03_20_1237_question_and_answer_combination.py  2023_03_21_0939_test_submissions_with_answers.py  2023_03_21_0942_test_submissions_with_answers.py  2023_03_21_0947_test_submissions_with_answers.py  2023_03_22_0848_test_submissions.py  2023_03_23_2150_knowledge_spaces.py  (+19 more)
fastapi-backend/app/cruds/: user.py
fastapi-backend/app/models/: answer.py  concept.py  knowledgeSpace.py  manyToManyTables.py  profession.py  question.py  role.py  test.py  testPublication.py  testSubmission.py  user.py
fastapi-backend/app/routers/: users.py
fastapi-backend/app/schemas/: role.py  user.py
fastapi-backend/app/security/: auth.py
(+1 files in other folders)
