[tool.poetry]
name = "fastapi-backend"
version = "0.1.0"
description = "Backend code using FastAPI for knowledge space testing application"
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "fastapi_backend"}]

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
